Added Gettin Lit page and also added link to all other pages

--- a/Benjis.html
+++ b/Benjis.html
@@ -28,6 +28,9 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
                     </li>
+	                <li class="nav-item">
+						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
+					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="Benjis.html">Benjis</a>
                     </li>
@@ -73,7 +76,7 @@
 				<!-- so we have 12 rows to work with-->
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
-						<h1 class="pb-2" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
+						<h1 class="pb-2 pt-2" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> Benjis</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
                             Toronto area with a passion to create. <a href="https://ampl.ink/wP6Lo"><u>"Benjis"</u></a> is MC Curtis' follow up from him successful
