--- a/GettinLit.html
+++ b/GettinLit.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Freeze Up</title>
+    <title>Benjis</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,7 +28,7 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
                     </li>
-						                <li class="nav-item">
+                    	                <li class="nav-item">
 						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
 					</li>
 					<li class="nav-item">
@@ -67,28 +67,42 @@
 
 	<!--Home-->
 	<body class="main">
-		<div class="row mt-5">
-			<div class="col-lg-6 mt-5 py-5 pl-5">
-				<img class="img-fluid" alt="" src="img/freezeup.jpg">
+		<div class="row mt-1">
+			<div class="col-lg-6 mt-5 py-3 pl-5">
+				<img class="img-fluid" alt="" src="img/GettinLit.jpg">
 			</div>
 			<!--my means margin on y-->
 			<div class="col-lg-6 my-auto">
 				<!-- so we have 12 rows to work with-->
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
-						<h1 class="pb-3" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
-						<h2 class="pb-3"> Freeze Up</h2>
+						<h1 class="pb-2 pt-2" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
+						<h2 class="pb-3"> Gettin' Lit</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
-                            Toronto area with a passion to create. <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a> is the first single following up MC Curtis' first ever mixtape
-                            <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Contrary to his mixtape release, <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a>
+                            Toronto area with a passion to create. <a href="https://ampl.ink/wP6Lo"><u>"Benjis"</u></a> is MC Curtis' follow up from him successful
+                            previous release <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a> which was placed on a number of playlists including "Bangers Only", "Toronto Heatseekers", "Upcoming Hip Hop"
+                            and "Canada Rap".<a href="https://ampl.ink/wP6Lo"><u>"Benjis"</u></a>
                             was recorded at the established and well known studio in Toronto called "Majur Musik Studios" which have had many notable Toronto artists record there
-                            including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help from engineer Pop Kris (who has credits
-                            with famous artists such as Cardi B and Popcaan). This song has a more relaxed laid-back vibe and following some success from "The Intro", MC Curtis felt like this
-                            is a great song to follow up with to continue to show his diversity in his art and show people what he has to offer!
+                            including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help
+                             from engineer Pop Kris (who has credits with famous artists such as Cardi B and Popcaan). This song has a more high energy flexing energy and MC 
+                             Curtis felt like this is a great song to follow up with to continue to show his diversity in his art and show people what he has to offer!
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="https://ampl.ink/G6vwv">Click Here To Stream!</a></button>
+							href="https://ampl.ink/wP6Lo">Click Here To Stream!</a></button>
+
+	<div class="socialLinks pt-3">
+    <a href="https://open.spotify.com/track/4AA06S0NugZhi2sKCnWBwQ?si=NyqxpkYAQu2MzW4jUKMiDg" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
+    <a href="https://soundcloud.com/user-593936036/benjis-offical-audio/s-OjkpyVClBxG" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
+    <a href="https://www.youtube.com/watch?v=gRhYKwpOqYs" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
+
+	<a href= "https://music.apple.com/gb/album/benjis/1524835427?i=1524835428&uo=4" style="color: black" target="_blank" 
+		<span class="fa-apple-music fa-stack-lg pl-2">
+  		<i class="fa fa-apple fa-stack-lg fa-lg"></i>
+		</span>
+	</a> 
+
+</div>
 					</div>
 
 				</div>
