--- a/Socials.html
+++ b/Socials.html
@@ -28,6 +28,9 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
 					</li>
+						                <li class="nav-item">
+						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
+					</li>
 					<li class="nav-item">
 										<li class="nav-item">
 						<a class="nav-link" href="Benjis.html">Benjis</a>
