Added link to title bar of all other tabs and added kid aint missin page

--- a/FreestyleHenny.html
+++ b/FreestyleHenny.html
@@ -31,6 +31,9 @@
 						                <li class="nav-item">
 						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
 					</li>
+					                    					<li class="nav-item">
+						<a class="nav-link" href="AintMissin.html">Kid Ain't Missin'</a>
+                    </li>
 					<li class="nav-item">
 						<a class="nav-link" href="Benjis.html">Benjis</a>
                     </li>
