--- a/AintMissin.html
+++ b/AintMissin.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Benjis</title>
+    <title>Kid Aint Missin</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,10 +28,10 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
                     </li>
-										<li class="nav-item">
+                    					<li class="nav-item">
 						<a class="nav-link" href="AintMissin.html">Kid Ain't Missin'</a>
                     </li>
-                    	                <li class="nav-item">
+	                <li class="nav-item">
 						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
 					</li>
 					<li class="nav-item">
@@ -72,7 +72,7 @@
 	<body class="main">
 		<div class="row mt-1">
 			<div class="col-lg-6 mt-5 py-3 pl-5">
-				<img class="img-fluid" alt="" src="img/GettinLit.jpg">
+				<img class="img-fluid" alt="" src="img/Benjis.png">
 			</div>
 			<!--my means margin on y-->
 			<div class="col-lg-6 my-auto">
@@ -80,7 +80,7 @@
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
 						<h1 class="pb-2 pt-2" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
-						<h2 class="pb-3"> Gettin' Lit</h2>
+						<h2 class="pb-3"> Benjis</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
                             Toronto area with a passion to create. <a href="https://ampl.ink/wP6Lo"><u>"Benjis"</u></a> is MC Curtis' follow up from him successful
                             previous release <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a> which was placed on a number of playlists including "Bangers Only", "Toronto Heatseekers", "Upcoming Hip Hop"
