--- a/Contact.html
+++ b/Contact.html
@@ -32,6 +32,9 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
 					</li>
+					                    					<li class="nav-item">
+						<a class="nav-link" href="AintMissin.html">Kid Ain't Missin'</a>
+                    </li>
 					               <li class="nav-item">
 						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
 					</li>
