--- a/FWTV.html
+++ b/FWTV.html
@@ -28,9 +28,13 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
                     </li>
+					                    					<li class="nav-item">
+						<a class="nav-link" href="AintMissin.html">Kid Ain't Missin'</a>
+                    </li>
 						                <li class="nav-item">
 						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
 					</li>
+					
 										<li class="nav-item">
 						<a class="nav-link" href="Benjis.html">Benjis</a>
                     </li>
