--- a/AintMissin.html
+++ b/AintMissin.html
@@ -72,7 +72,7 @@
 	<body class="main">
 		<div class="row mt-1">
 			<div class="col-lg-6 mt-5 py-3 pl-5">
-				<img class="img-fluid" alt="" src="img/Benjis.png">
+				<img class="img-fluid" alt="" src="img/KidAintMissin.jpg">
 			</div>
 			<!--my means margin on y-->
 			<div class="col-lg-6 my-auto">
@@ -80,9 +80,9 @@
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
 						<h1 class="pb-2 pt-2" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
-						<h2 class="pb-3"> Benjis</h2>
+						<h2 class="pb-3"> Kid Ain't Missin'</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
-                            Toronto area with a passion to create. <a href="https://ampl.ink/wP6Lo"><u>"Benjis"</u></a> is MC Curtis' follow up from him successful
+                            Toronto area with a passion to create. <a href="https://ampl.ink/wP6Lo"><u>"Kid Ain't Missin"</u></a> is MC Curtis' follow up from him successful
                             previous release <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a> which was placed on a number of playlists including "Bangers Only", "Toronto Heatseekers", "Upcoming Hip Hop"
                             and "Canada Rap".<a href="https://ampl.ink/wP6Lo"><u>"Benjis"</u></a>
                             was recorded at the established and well known studio in Toronto called "Majur Musik Studios" which have had many notable Toronto artists record there
