--- a/AintMissin.html
+++ b/AintMissin.html
@@ -82,7 +82,7 @@
 						<h1 class="pb-2 pt-2" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> Kid Ain't Missin'</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
-                            Toronto area with a passion to create. <a href="https://ampl.ink/wP6Lo"><u>"Kid Ain't Missin"</u></a> is MC Curtis' follow up from him successful
+                            Toronto area with a passion to create. <a href="https://ampl.ink/N9xzM"><u>"Kid Ain't Missin"</u></a> is MC Curtis' follow up from him successful
                             previous release <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a> which was placed on a number of playlists including "Bangers Only", "Toronto Heatseekers", "Upcoming Hip Hop"
                             and "Canada Rap".<a href="https://ampl.ink/wP6Lo"><u>"Benjis"</u></a>
                             was recorded at the established and well known studio in Toronto called "Majur Musik Studios" which have had many notable Toronto artists record there
