--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="theintro.html">The Intro EP</a></button>
+							href="AintMissin.html">Newest Release</a></button>
 					</div>
 					<div class="socialLinks pt-1">
-						<a href="https://www.youtube.com/playlist?list=PLwJArGHzFTq-14i5zZ18nFQdTOu3KMf7H" class="fa fa-youtube-play m-2" style="color: blue" target="_blank"></a>
-						<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=QpeQzztITziq3N0TRfUaMA" class="fa fa-spotify m-2" target="_blank" style="color: blue"></a> 
-						<a href="https://soundcloud.com/user-593936036/sets/the-intro-1" class="fa fa-soundcloud m-2" style="color: blue" target="_blank"></a>
-			<a href= "https://music.apple.com/gb/album/the-intro/1512799363" style="color: blue" target="_blank" 
+						<a href="https://www.youtube.com/channel/UCHKnxlk06TaDC8dexxB_nGQ" class="fa fa-youtube-play m-2" style="color: blue" target="_blank"></a>
+						<a href="https://open.spotify.com/artist/49Ju9QkYNPEkLWA5UKfHY5?si=DMCWgMMqREi0eRr038Ix6g" class="fa fa-spotify m-2" target="_blank" style="color: blue"></a> 
+						<a href="https://soundcloud.com/user-593936036" class="fa fa-soundcloud m-2" style="color: blue" target="_blank"></a>
+			<a href= "https://music.apple.com/ca/artist/mc-curtis/596350682" style="color: blue" target="_blank" 
 		<span class="fa-apple-music fa-stack-lg pl-2">
   		<i class="fa fa-apple fa-stack-lg fa-lg"></i>
 		</span>
