Had to change and modify the links for AintMissin Page

--- a/AintMissin.html
+++ b/AintMissin.html
@@ -92,14 +92,14 @@
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="https://ampl.ink/wP6Lo">Click Here To Stream!</a></button>
+							href="https://ampl.ink/N9xzM">Click Here To Stream!</a></button>
 
 	<div class="socialLinks pt-3">
-    <a href="https://open.spotify.com/track/4AA06S0NugZhi2sKCnWBwQ?si=NyqxpkYAQu2MzW4jUKMiDg" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
-    <a href="https://soundcloud.com/user-593936036/benjis-offical-audio/s-OjkpyVClBxG" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
-    <a href="https://www.youtube.com/watch?v=gRhYKwpOqYs" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
+    <a href="https://open.spotify.com/track/7tcFMsQvoEIzpnITmU4Cdf" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
+    <a href="https://soundcloud.com/user-593936036/kid-aint-missin" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
+    <a href="https://www.youtube.com/watch?v=E8cZPW3_4UU&feature=youtu.be&ab_channel=MCCurtis" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
 
-	<a href= "https://music.apple.com/gb/album/benjis/1524835427?i=1524835428&uo=4" style="color: black" target="_blank" 
+	<a href= "https://music.apple.com/gb/album/kid-aint-missin-single/1531637042" style="color: black" target="_blank" 
 		<span class="fa-apple-music fa-stack-lg pl-2">
   		<i class="fa fa-apple fa-stack-lg fa-lg"></i>
 		</span>
