Added it to the task bar

--- a/Routine.html
+++ b/Routine.html
@@ -35,7 +35,7 @@
 						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="Benjis.html">Benjis</a>
+						<a class="nav-link" href="Routine.html">Routine</a>
                     </li>
                     <li class="nav-item">
 						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
@@ -56,6 +56,7 @@
 						<div class="dropdown-menu" aria-labelledby="dropdownId">
                             <a class="dropdown-item" href="FWTV.html">Fuck With the Vision</a>
 							<a class="dropdown-item" href="MakeAMill.html">Make a Mill</a>
+                        	<a class="nav-link" href="Benjis.html">Benjis</a>
 							<a class="dropdown-item" href="LiquorFlowin.html">Keep the Liquor Flowin'</a>
 							<a class="dropdown-item" href="LoudThatISmoke.html">Loud That I Smoke</a>
 							<a class="dropdown-item" href="FreestyleHenny.html">Freestyle Henny</a>
