--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="Benjis.html">Benjis</a>
+						<a class="nav-link" href="Routine.html">Routine</a>
                     </li>
 					<li class="nav-item">
 						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
