Changed Image and text of Routine

--- a/Routine.html
+++ b/Routine.html
@@ -73,7 +73,7 @@
 	<body class="main">
 		<div class="row mt-1">
 			<div class="col-lg-6 mt-5 py-3 pl-5">
-				<img class="img-fluid" alt="" src="img/Routine.jpg">
+				<img class="img-fluid" alt="" src="img/Routine.png">
 			</div>
 			<!--my means margin on y-->
 			<div class="col-lg-6 my-auto">
@@ -82,14 +82,14 @@
 					<div class="home-content offset -lg-1 col-lg-10">
 						<h1 class="pb-2 pt-2" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
 						<h2 class="pb-3"> Routine</h2>
-						<h2 class="pb-3"> RELEASES MAY 7TH</h2>
+						<h2 class="pb-3"> Newest Release</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
                             Toronto area with a passion to create. <a href="https://ampl.ink/N9xzM"><u>"Routine"</u></a> is MC Curtis' follow up after a short lull from releases following
                             single <a href="https://ampl.ink/G6vwv"><u>"Too Lit"</u></a> which was
                             was recorded at the established and well known studio in Toronto called "Majur Musik Studios" which have had many notable Toronto artists record there
                             including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help
                              from engineer Pop Kris (who has credits with famous artists such as Cardi B and Popcaan). This song has a more high energy flexing energy and MC 
-                             Curtis felt like this is a great song to follow up with to continue to show his diversity in his art and show people what he has to offer!
+                             Curtis felt like this is a grgieat song to follow up with to continue to show his diversity in his art and show people what he has to offer!
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
