Changed newest release button to Routine

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="AintMissin.html">Newest Release</a></button>
+							href="Routine.html">Newest Release</a></button>
 					</div>
 					<div class="socialLinks pt-1">
 						<a href="https://www.youtube.com/channel/UCHKnxlk06TaDC8dexxB_nGQ" class="fa fa-youtube-play m-2" style="color: blue" target="_blank"></a>
