Added routine link

--- a/Routine.html
+++ b/Routine.html
@@ -93,7 +93,7 @@
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="">Click Here To Stream!</a></button>
+							href="https://ampl.ink/MlkoG">Click Here To Stream!</a></button>
 
 	<div class="socialLinks pt-3">
     <a href="" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
