Added Too Lit tab and made some other small changes

--- a/Collabs.html
+++ b/Collabs.html
@@ -37,6 +37,12 @@
 										<li class="nav-item">
 						<a class="nav-link" href="Benjis.html">Benjis</a>
                     </li>
+										<li class="nav-item">
+						<a class="nav-link" href="Too Lit.html">Too Lit</a>
+                    </li>
+										<li class="nav-item">
+						<a class="nav-link" href="Routine.html">Routine</a>
+                    </li>
 					<li class="nav-item">
 						<a class="nav-link" href="UCU.html">UCU</a>
 					</li>
