--- a/GettinLit.html
+++ b/GettinLit.html
@@ -35,6 +35,12 @@
 						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
 					</li>
 					<li class="nav-item">
+						<a class="nav-link" href="Too Lit.html">Too Lit</a>
+                    </li>
+										<li class="nav-item">
+						<a class="nav-link" href="Routine.html">Routine</a>
+                    </li>
+					<li class="nav-item">
 						<a class="nav-link" href="Benjis.html">Benjis</a>
                     </li>
                     <li class="nav-item">
