--- a/UCU.html
+++ b/UCU.html
@@ -37,6 +37,9 @@
 										<li class="nav-item">
 						<a class="nav-link" href="Routine.html">Routine</a>
                     </li>
+										<li class="nav-item">
+						<a class="nav-link" href="Too Lit.html">Too Lit</a>
+                    </li>
                     <li class="nav-item">
 						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
 					</li>
