--- a/TooLit.html
+++ b/TooLit.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Freeze Up</title>
+    <title>Too Lit</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,20 +28,17 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
                     </li>
-					                    					<li class="nav-item">
+										<li class="nav-item">
 						<a class="nav-link" href="AintMissin.html">Kid Ain't Missin'</a>
                     </li>
-						                <li class="nav-item">
+                    					<li class="nav-item">
+						<a class="nav-link" href="Routine.html">Routine</a>
+                    </li>
+                    	                <li class="nav-item">
 						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="Benjis.html">Benjis</a>
-                    </li>
-					<li class="nav-item">
-						<a class="nav-link" href="Too Lit.html">Too Lit</a>
-                    </li>
-										<li class="nav-item">
-						<a class="nav-link" href="Routine.html">Routine</a>
                     </li>
                     <li class="nav-item">
 						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
@@ -76,28 +73,38 @@
 
 	<!--Home-->
 	<body class="main">
-		<div class="row mt-5">
-			<div class="col-lg-6 mt-5 py-5 pl-5">
-				<img class="img-fluid" alt="" src="img/freezeup.jpg">
+		<div class="row mt-1">
+			<div class="col-lg-6 mt-5 py-3 pl-5">
+				<img class="img-fluid" alt="" src="img/TooLit.png">
 			</div>
 			<!--my means margin on y-->
 			<div class="col-lg-6 my-auto">
 				<!-- so we have 12 rows to work with-->
 				<div class="row">
 					<div class="home-content offset -lg-1 col-lg-10">
-						<h1 class="pb-3" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
-						<h2 class="pb-3"> Freeze Up</h2>
+						<h1 class="pb-2 pt-2" style="color: black"> MC Curtis</h1><!--pb means padding bottom-->
+						<h2 class="pb-3"> Too Lit</h2>
                         <p class="BGdarkest"> <a href="index.html"><u>MC Curtis</u></a> is an up and coming rapper from the 
-                            Toronto area with a passion to create. <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a> is the first single following up MC Curtis' first ever mixtape
-                            <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a>. Contrary to his mixtape release, <a href="https://ampl.ink/G6vwv"><u>"Freeze Up"</u></a>
-                            was recorded at the established and well known studio in Toronto called "Majur Musik Studios" which have had many notable Toronto artists record there
-                            including Killy, Top5, 3MFrench, WhyG, and Booggz to name a few. At the studio, Curtis worked with and recorded the track along side and with help from engineer Pop Kris (who has credits
-                            with famous artists such as Cardi B and Popcaan). This song has a more relaxed laid-back vibe and following some success from "The Intro", MC Curtis felt like this
-                            is a great song to follow up with to continue to show his diversity in his art and show people what he has to offer!
+                            Toronto area with a passion to create. <a href="https://ampl.ink/yPNMP"><u>"Too Lit"</u></a> was MC Curtis’ first single of 2021 and started off the year with a bang and a ton of energy! This song is just a fun loving party song about having a good time and shows MC Curtis’ versatility with his ability to have slower chill songs like Routine and Freeze Up to the hard hitting bar drivin Too Lit.
+Curtis felt like this is a great song to follow up with to continue to show his diversity in his art and show people what he has to offer!
+
 						</p>
 
 						<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-							href="https://ampl.ink/G6vwv">Click Here To Stream!</a></button>
+							href="https://ampl.ink/yPNMP">Click Here To Stream!</a></button>
+
+	<div class="socialLinks pt-3">
+    <a href="https://open.spotify.com/track/0EL2i0dp73HrreoFuAYSYb?si=de35a96241db4db5" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
+    <!--<a href="https://soundcloud.com/user-593936036/benjis-offical-audio/s-OjkpyVClBxG" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> -->
+    <a href="https://www.youtube.com/watch?v=UMfKxOQSXHo&ab_channel=MCCurtis" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
+
+	<a href= "https://music.apple.com/us/album/too-lit/1543805798?i=1543805800" style="color: black" target="_blank" 
+		<span class="fa-apple-music fa-stack-lg pl-2">
+  		<i class="fa fa-apple fa-stack-lg fa-lg"></i>
+		</span>
+	</a> 
+
+</div>
 					</div>
 
 				</div>
