--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 						<a class="nav-link" href="Routine.html">Routine</a>
                     </li>
 					<li class="nav-item">
+						<a class="nav-link" href="Too Lit.html">Too Lit</a>
+                    </li>
+					<li class="nav-item">
 						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
 					</li>
 					<li class="nav-item">
@@ -118,46 +121,30 @@
 	<div class="container text-center w-100">
 		<h2 class="py-3">The Man Behind the Music</h2>
 		<div class="mx-auto heading-line"></div>
-		<p class="py-3">MC Curtis is an up and coming rapper from the Greater Toronto Area. MC Curtis 
-			started in the music industry when he created his distribution and management company
-			 Underground Comeup Records (UCU). In early 2019 he released a collaborative album with 
-			 artists from Toronto to showcase there talent called "Toronto After Dark" (MC Curtis did 
-			 not actually rap on this project). In July 2019 to follow up, he released "Toronto After
-			  Dark 2" which had the first appearance of MC Curtis with his first ever release "Fuck
-			   With the Vision" which has received over 20 thousands streams on Spotify which significantly
-			    out performed the rest of the tracks on Toronto After Dark 2. 
+		<p class="py-3">
+			  
+			  MC Curtis is an up and coming independent artist from the Canada who blends his lyrical ability with his soft melodies to deliver his unique style. His style is centered around Hip-Hop but influences of Pop, Pop Punk along with R&B can be felt in his music as well.MC Curtis 
+            started in the music industry when he created his distribution and management company
+             Underground Comeup Records (UCU). In early 2019 he released a collaborative album with 
+             artists from Toronto to showcase there talent called "Toronto After Dark" (MC Curtis did 
+             not actually rap on this project). In July 2019 to follow up, he released "Toronto After
+              Dark 2" which had the first appearance of MC Curtis with his first ever release "Fuck
+               With the Vision" which has received over 20 thousands streams on Spotify which significantly
+                out performed the rest of the tracks on Toronto After Dark 2. 
 
-			MC Curtis is currently in university for software engineering so his schedule is pretty chaotic but he still
-			 finds time to dedicate to his craft. MC Curtis has dropped a couple of songs all leading up to his
-			  first EP release titled <a href="https://ampl.ink/emXGL"><u>"The Intro"</u></a> which he released June 1st which has already garnered thousands
-			  of streams! This tape included standout tracks such as <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> Which already has surpassed 10k streams
-			  on SoundCloud alone and <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>
-			  which is currently sitting at over 7k streams on Spotify. Make sure to stay up to date and follow me on my journey and check out my new single 
-			  <a href="https://ampl.ink/G6vwv"><u>Freeze Up</u></a>, you won't be disappointed!
+            MC Curtis has been dedicated to his craft working hard for over 2 years now and has an arsenal of unreleased music covering all styles and moods waiting to be released! 
+			He looks to keep the momentum he gained in early 2021 from <a href="https://ampl.ink/yPNMP"><u>Too Lit</u></a> and <a href="https://ampl.ink/MlkoG"><u>Routine</u></a> rolling into late 2021 and early 2022! 
+			Make sure to stay tuned and get ready to see a career unfold in front of your eyes!
+
 			  
 			</p>
 			<button class="btn btn-lg btn-outline-secondary"><a class="indexButton"
-				href="https://ampl.ink/G6vwv">Stream Freeze Up</a></button>
+				href="https://ampl.ink/yPNMP">Stream Too Lit</a></button>
 	</div>
 
 
 </section>
-<!--Check Out MC Curtis' New EP-->
-<section class="go-stream pt-2 pb-3" style="background-color: aquamarine;">
-	<!--Making the size of this class. text in center
-	and width of text 50% of the screen-->
-	<div class="container text-center w-60">
-		<h2 class="py-3">Check Out MC Curtis' New EP</h2>
 
-		<p class="py-3">MC Curtis started his career being featured on Toront After Dark 2 but he released his first
-			solo mixtape/ep on June 1st 2020 with stand out hits <a href="https://ampl.ink/G6ReO"><u>Freestyle Henny</u></a> and <a href="https://ampl.ink/nDlYq"><u>No Cap</u></a>.
-		</p>
-		<button class="btn btn-lg btn-primary"><a class="indexButton"
-			href="https://ampl.ink/emXGL">Stream Here</a></button>
-	</div>
-
-
-</section>
 
 <section style="background-color: aqua;">
 
@@ -171,19 +158,19 @@
 			<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">MC Curtis</a>
 		</div>
 		<div class="col">
-			<a href="https://open.spotify.com/album/3gshESZiZ7DXyBtyAnsh1h?si=km0ozNpZTlOFNsPgJhVwXQ">The Intro EP</a>
+			<a href="https://open.spotify.com/track/0EL2i0dp73HrreoFuAYSYb?si=b87c194aeee74277">Too Lit</a>
 		</div>
 		<div class="col">
-			<a href="https://open.spotify.com/playlist/3PmJwwC3EIw6qrc9JaqmTp?si=5WTrq6tZRfeuIa6bOHZDPA">All Toronto Playlist</a>  
+			<a href="https://open.spotify.com/playlist/1oGvLhoxXGZl78ubur5YNU?si=bc04160e170b44d2">MC Curtis Rotation</a>  
 		</div>        
 	</div>
 </div>
 
 
 
-
+<!--
 <h4 ><Strong>SoundCloud</Strong></h4>
-	<!-- <div class="container">container is the section from MC Curtis to full distography at top -->
+	
 		<div class="row">
 			<div class="col">
 				<a href="https://soundcloud.com/user-593936036">MC Curtis</a>
@@ -194,7 +181,7 @@
 		</div>
 	</div>
 
-
+-->
 </section>
 
 
