Fixed spacing on Too Lit html title in bar

--- a/index.html
+++ b/index.html
@@ -32,9 +32,6 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="theintro.html">The Intro <span class="sr-only">(current)</span></a>
 					</li>
-					                    					<li class="nav-item">
-						<a class="nav-link" href="AintMissin.html">Kid Ain't Missin'</a>
-                    </li>
 						                <li class="nav-item">
 						<a class="nav-link" href="GettinLit.html">Gettin' Lit</a>
 					</li>
@@ -42,7 +39,7 @@
 						<a class="nav-link" href="Routine.html">Routine</a>
                     </li>
 					<li class="nav-item">
-						<a class="nav-link" href="Too Lit.html">Too Lit</a>
+						<a class="nav-link" href="TooLit.html">Too Lit</a>
                     </li>
 					<li class="nav-item">
 						<a class="nav-link" href="FreezeUp.html">Freeze Up</a>
@@ -62,6 +59,7 @@
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Full Distography Links</a>
 						<div class="dropdown-menu" aria-labelledby="dropdownId">
+							<a class="dropdown-item" href="AintMissin.html">Kid Ain't Missin'</a>
 							<a class="dropdown-item" href="FWTV.html">Fuck With the Vision</a>
 							<a class="dropdown-item" href="MakeAMill.html">Make a Mill</a>
 							<a class="dropdown-item" href="LiquorFlowin.html">Keep the Liquor Flowin'</a>
