Made changes to links

--- a/Routine.html
+++ b/Routine.html
@@ -99,9 +99,8 @@
 							href="https://ampl.ink/MlkoG">Click Here To Stream!</a></button>
 
 	<div class="socialLinks pt-3">
-    <a href="" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
-    <a href="" class="fa fa-soundcloud m-2" style="color: black" target="_blank"></a> 
-    <a href="" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
+    <a href="https://open.spotify.com/track/0GbS6TlWvRYotibfStdcw1?si=3d3ea14175f5434f" class="fa fa-spotify m-2" style="color: black" target="_blank" ></a>
+    <a href="https://www.youtube.com/watch?v=UMfKxOQSXHo&ab_channel=MCCurtis" class="fa fa-youtube m-2" style="color: black" target="_blank" ></a>
 
 	<a href= "" style="color: black" target="_blank" 
 		<span class="fa-apple-music fa-stack-lg pl-2">
